[FIX] Container gap increased in event details page

--- a/src/sass/partials/layouts/_events.scss
+++ b/src/sass/partials/layouts/_events.scss
@@ -37,10 +37,9 @@
     .card-text {
       display: flex;
       flex-direction: column;
-      height: 100%;
       padding: 2px 10px 10px 5px;
       z-index: 1;
-
+      
       .card-header-text {
         text-align: center;
         font-size: 1.06em;
